Fixed rount trip getting cut off

--- a/client/src/static/styles/student-styles.scss
+++ b/client/src/static/styles/student-styles.scss
@@ -64,7 +64,7 @@
     .tripIcons{
         display:float;
         right:0px;
-        width:100px!important;
+        width:120px!important;
         padding: 0px !important;
         padding-top:10px!important;
         margin:0px!important;
